--- a/index.html
+++ b/index.html
@@ -403,6 +403,52 @@
             </div>
         </div>
     </section>
+    <!-- PORTFOLIO -->
+    <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">Portfolio</h2>
+        <span class="section__subtitle">My Works</span>
+        <div class="portfolio__container container">
+            <div>
+                <!-- PORTFOLIO 1 -->
+                <div class="portfolio__content grid">
+                    <img src="Images/design1.png" alt="Nothing" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <h3 class="portfolio__title">Portfolio Website</h3>
+                        <p class="portfolio__description">Make a responsive website for the fictional character John wick with more UI work</p>
+                        <a href="#" class="button button--flex button--small portfolio__button">
+                            Demo
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- PORTFOLIO 2 -->
+                <div class="portfolio__content grid">
+                    <img src="Images/bmw.jpg" alt="Nothing" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <h3 class="portfolio__title">BMW BIke</h3>
+                        <p class="portfolio__description">Make a website for the BMW bike which has the different version of colour</p>
+                        <a href="#" class="button button--flex button--small portfolio__button">
+                            Demo
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- PORTFOLIO 3 -->
+                <div class="portfolio__content grid">
+                    <img src="Images/cube.jpg" alt="Nothing" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <h3 class="portfolio__title">3D Cube</h3>
+                        <p class="portfolio__description">Make a 3d cube with the Animations and deployed in the website</p>
+                        <a href="#" class="button button--flex button--small portfolio__button">
+                            Demo
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <!-- FOOTER -->
 
     <!-- SCROLL TOP -->
