--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link">
+                        <a href="#home" class="nav__link active-link">
                             <i class="uil uil-estate nav__icon"></i>Home
                         </a>
                     </li>
@@ -57,6 +57,8 @@
                 <i class="uil uil-times nav__close" id="nav-close"></i> 
             </div>
             <div class="nav__btns">
+                <!-- Theme Change Button -->
+                <i class="uil uil-moon change-theme" id="theme-button"></i>
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
                 </div>
@@ -552,6 +554,9 @@
         </div>
     </footer>
     <!-- SCROLL TOP -->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="uil uil-arrow-up scrollup__icon"></i>
+    </a>
 
     <!-- SWIPER JS -->
     <script src="./js/swiper-bundle.min.js"></script>
