Added media queries

--- a/index.html
+++ b/index.html
@@ -150,124 +150,124 @@
             <h2 class="section__title">Skills</h2>
             <span class="section__subtitle">My Technical Level</span>
             <div class="skills__container container grid">
-                <div>
-                    <!-- SKILL 1-->
-                    <div class="skills__content skills__open">
-                        <div class="skills__header">
-                            <i class="uil uil-brackets-curly skills__icon"></i>
-                            <div>
-                                <h1 class="skills__title">Frontend Developer</h1>
-                                <span class="skills__subtitle">Nearly one years</span>
-                            </div>
-                            <i class="uil uil-angle-down skills__arrow"></i>
+                
+                <!-- SKILL 1-->
+                <div class="skills__content skills__open">
+                    <div class="skills__header">
+                        <i class="uil uil-brackets-curly skills__icon"></i>
+                        <div>
+                            <h1 class="skills__title">Frontend Developer</h1>
+                            <span class="skills__subtitle">Nearly one years</span>
                         </div>
-                        <div class="skills__list grid">
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">HTML</h3>
-                                    <span class="skills__number">80%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__html"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">80%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__css"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__js"></span>
-                                </div>
-                            </div>
-                        </div>
+                        <i class="uil uil-angle-down skills__arrow"></i>
                     </div>
-                    <!-- SKILL 2 -->
-                    <div class="skills__content skills__close">
-                        <div class="skills__header">
-                            <i class="uil uil-server-network-alt skills__icon"></i>
-                            <div>
-                                <h1 class="skills__title">Backend Developer</h1>
-                                <span class="skills__subtitle">Nearly Six Month</span>
+                    <div class="skills__list grid">
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">HTML</h3>
+                                <span class="skills__number">80%</span>
                             </div>
-                            <i class="uil uil-angle-down skills__arrow"></i>
-                        </div>
-                        <div class="skills__list grid">
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Python</h3>
-                                    <span class="skills__number">90%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__python"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">C++</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__cpp"></span>
-                                </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__html"></span>
                             </div>
                         </div>
-                    </div>
-                    <!-- SKILL 3 -->
-                    <div class="skills__content skills__close">
-                        <div class="skills__header">
-                            <i class="uil uil-swatchbook skills__icon"></i>
-                            <div>
-                                <h1 class="skills__title">Others</h1>
-                                <span class="skills__subtitle">More than 2 months</span>
+
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">CSS</h3>
+                                <span class="skills__number">80%</span>
                             </div>
-                            <i class="uil uil-angle-down skills__arrow"></i>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__css"></span>
+                            </div>
                         </div>
-                        <div class="skills__list grid">
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Git</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__git"></span>
-                                </div>
-                            </div>
 
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Microsoft Office</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__mof"></span>
-                                </div>
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">JavaScript</h3>
+                                <span class="skills__number">70%</span>
                             </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Microsoft Powerpoint</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__mpo"></span>
-                                </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__js"></span>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- SKILL 2 -->
+                <div class="skills__content skills__close">
+                    <div class="skills__header">
+                        <i class="uil uil-server-network-alt skills__icon"></i>
+                        <div>
+                            <h1 class="skills__title">Backend Developer</h1>
+                            <span class="skills__subtitle">Nearly Six Month</span>
+                        </div>
+                        <i class="uil uil-angle-down skills__arrow"></i>
+                    </div>
+                    <div class="skills__list grid">
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">Python</h3>
+                                <span class="skills__number">90%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__python"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">C++</h3>
+                                <span class="skills__number">70%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__cpp"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- SKILL 3 -->
+                <div class="skills__content skills__close">
+                    <div class="skills__header">
+                        <i class="uil uil-swatchbook skills__icon"></i>
+                        <div>
+                            <h1 class="skills__title">Others</h1>
+                            <span class="skills__subtitle">More than 2 months</span>
+                        </div>
+                        <i class="uil uil-angle-down skills__arrow"></i>
+                    </div>
+                    <div class="skills__list grid">
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">Git</h3>
+                                <span class="skills__number">70%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__git"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">Microsoft Office</h3>
+                                <span class="skills__number">70%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__mof"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">Microsoft Powerpoint</h3>
+                                <span class="skills__number">70%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__mpo"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </section>
         <!-- QUALIFICATION -->
@@ -308,7 +308,7 @@
                             </div>
                             <div>
                                 <h3 class="qualification__title">Higher Secondary School Certificate</h3>
-                                <span class="qualification__subtitle">Easwari Engineering College</span>
+                                <span class="qualification__subtitle">Shamrock Matriculation School</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2019 - 2021
@@ -318,7 +318,7 @@
                         </div>
                         <!-- Qualification 3 -->
                         <div class="qualification__data">
-                            <div>
+                            <div class="qualification__three">
                                 <h3 class="qualification__title">Electronics and Communication Engineering</h3>
                                 <span class="qualification__subtitle">Easwari Engineering College</span>
                                 <div class="qualification__calender">
@@ -489,13 +489,11 @@
                     </div>
                 </div>
                 <form action="" class="contact__form grid">
-                    <div class="contact__input grid">
+                    <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
                             <input type="text" class="contact__input">
                         </div>
-                    </div>
-                    <div class="contact__input grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
                             <input type="email" class="contact__input">
