--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <span class="about__info-title">01+</span>
                             <span class="about__info-name">Years <br> experience</span>
                         </div>
-                        <div>
+                        <div class="second__info">
                             <span class="about__info-title">03+</span>
                             <span class="about__info-name">Completed <br> projects</span>
                         </div>
@@ -540,10 +540,10 @@
                     <a href="https://www.facebook.com/profile.php?id=100090651825597" target="_blank" class="footer__social">
                         <i class="uil uil-facebook-f"></i>
                     </a>
-                    <a href="" target="_blank" class="footer__social">
+                    <a href="https://www.instagram.com/arshathahamed10/" target="_blank" class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
-                    <a href="" target="_blank" class="footer__social">
+                    <a href="https://twitter.com/Arshath33016985" target="_blank" class="footer__social">
                         <i class="uil uil-twitter-alt"></i>
                     </a>
                 </div>
