--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Parsing the Wed files</p>
+                                    <p>Parsing the Web files</p>
                                 </li>
                             </ul>
                         </div>
@@ -533,7 +533,7 @@
                         <a href="#portfolio" class="footer__link">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#contact" class="footer__link">Contactme</a>
+                        <a href="#contact" class="footer__link">Contact</a>
                     </li>
                 </ul>
                 <div class="footer__socials">
