--- a/index.html
+++ b/index.html
@@ -425,11 +425,11 @@
                     </div>
                     <!-- PORTFOLIO 2 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="Images/bmw.jpg" alt="Nothing" class="portfolio__img">
+                        <img src="Images/404.png" alt="Nothing" class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">BMW BIke</h3>
-                            <p class="portfolio__description">Make a website for the BMW bike which has the different version of colour</p>
-                            <a href="https://bmw-bike.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">404 Not Found</h3>
+                            <p class="portfolio__description">Build a 404 not found page with animations</p>
+                            <a href="https://404-not-found-10.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
