--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     </div>
                     <!-- PORTFOLIO 2 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="Images/404.png" alt="Nothing" class="portfolio__img">
+                        <img src="Images/404.png" alt="Nothing" class="portfolio__img img2">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">404 Not Found</h3>
                             <p class="portfolio__description">Build a 404 not found page with animations</p>
