--- a/index.html
+++ b/index.html
@@ -488,31 +488,26 @@
                         </div>
                     </div>
                 </div>
-                <form action="" class="contact__form grid">
+                <form action="" class="contact__form grid" id="contact-form">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <input name="user_name" type="text" required class="contact__input">
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input">
+                            <input name="user_email" type="email" required class="contact__input">
                         </div>
                     </div>
                     <div class="contact__content">
-                        <label for="" class="contact__label">Project</label>
-                        <input type="text" class="contact__input">
-                    </div>
-                    <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        
                     </div>
-                    <div>
-                        <a href="#" class="button button--flex">
-                            Send Message
-                            <i class="uil uil-message button__icon"></i>
-                        </a>
-                    </div>
+                    <p class="contact__message" id="contact-message"></p>
+                    <button type="submit" class="button contact__button button--flex">Send message 
+                        <i class="uil uil-message button__icon"></i>
+                    </button>
                 </form>
             </div>
         </section>
@@ -555,6 +550,9 @@
     <a href="#" class="scrollup" id="scroll-up">
         <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
+
+    <!-- EMAIL JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
     <!-- SWIPER JS -->
     <script src="./js/swiper-bundle.min.js"></script>
