--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- UNICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./Images/icons8-portfolio-64.png">
     <!-- SWIPER CSS -->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
