Added new skills

--- a/index.html
+++ b/index.html
@@ -217,6 +217,36 @@
 
                         <div class="skills__data">
                             <div class="skills__titles">
+                                <h3 class="skills__name">Java</h3>
+                                <span class="skills__number">80%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__java"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">SQL</h3>
+                                <span class="skills__number">90%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__sql"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">C</h3>
+                                <span class="skills__number">80%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__c"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__titles">
                                 <h3 class="skills__name">C++</h3>
                                 <span class="skills__number">70%</span>
                             </div>
@@ -288,11 +318,11 @@
                         <!-- Qualification 1 -->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Secondary School Leaving Certificate</h3>
-                                <span class="qualification__subtitle">Shamrock Matriculation School</span>
+                                <h3 class="qualification__title">Electronics and Communication Engineering</h3>
+                                <span class="qualification__subtitle">Easwari Engineering College</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2008 - 2019
+                                    2021 - 2025
                                 </div>
                             </div>
                             <div>
@@ -320,11 +350,11 @@
                         <!-- Qualification 3 -->
                         <div class="qualification__data">
                             <div class="qualification__three">
-                                <h3 class="qualification__title">Electronics and Communication Engineering</h3>
-                                <span class="qualification__subtitle">Easwari Engineering College</span>
+                                <h3 class="qualification__title">Secondary School Leaving Certificate</h3>
+                                <span class="qualification__subtitle">Shamrock Matriculation School</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2021 - 2025
+                                    2008 - 2019
                                 </div>
                             </div>
                             <div>
