--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- HEADER -->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Arshath</a>
+            <a href="#" class="nav__logo">Arshath Ahamed</a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
@@ -74,10 +74,6 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div class="home__content grid">
-                    <div class="home__social">
-                        <a href="https://www.linkedin.com/in/arshathahamed10/" target="_blank" class="home__social-icon"><i class="uil uil-linkedin-alt"></i></a>
-                        <a href="https://github.com/arshathahamed10" target="_blank" class="home__social-icon"><i class="uil uil-github-alt"></i></a>
-                    </div>
                     <div class="home__img">
                         <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <mask id="mask0" mask-type="alpha">
@@ -96,11 +92,11 @@
                         </svg>
                     </div>
                     <div class="home__data">
-                        <h1 class="home__title">Hi, I'am Arshath</h1>
+                        <h1 class="home__title">Hi, I'am <br> Arshath Ahamed</h1>
                         <h3 class="home__subtitle">Web Developer</h3>
-                        <p class="home__description">Beginning level experience in web design and knowlledge, producing quality work.</p>
-                        <a href="#contact" class="button button--flex">
-                        Contact Me <i class="uil uil-message button__icon"></i>
+                        <p class="home__description">Beginning level experience in web design <br>and knowlledge, producing quality work.</p>
+                        <a download="" href="./pdf/Arshath-CV.pdf" class="button button--flex">
+                            Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
                 </div>
@@ -139,8 +135,12 @@
                         </div> -->
                     </div>
                     <div class="about__buttons">
-                        <a download="" href="./pdf/Arshath-CV.pdf" class="button button--flex">
-                            Download CV<i class="uil uil-download-alt button__icon"></i>
+                        <div class="about__social-icons">
+                            <a href="https://www.linkedin.com/in/arshathahamed10/" target="_blank" class="about__social-icon"><i class="uil uil-linkedin-alt"></i></a>
+                            <a href="https://github.com/arshathahamed10" target="_blank" class="about__social-icon"><i class="uil uil-github-alt"></i></a>
+                        </div>
+                        <a href="#contact" class="button button--flex">
+                            Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
             <div class="skills__container container grid">
                 
                 <!-- SKILL 1-->
-                <div class="skills__content skills__open">
+                <div class="skills__content skills__close">
                     <div class="skills__header">
                         <i class="uil uil-brackets-curly skills__icon"></i>
                         <div>
@@ -317,7 +317,7 @@
                     <div class="qualification__content">
                         <!-- Qualification 1 -->
                         <div class="qualification__data">
-                            <div>
+                            <div class="san">
                                 <h3 class="qualification__title">Electronics and Communication Engineering</h3>
                                 <span class="qualification__subtitle">Easwari Engineering College</span>
                                 <div class="qualification__calender">
