--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- MAIN -->
     <main class="main">
         <!-- HOME -->
-        <section class="home section" id="home">
+        <section class="home section hidden" id="home">
             <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__img">
@@ -111,7 +111,7 @@
         </section>
 
         <!-- ABOUT -->
-        <section class="about section" id="about">
+        <section class="about section hidden" id="about">
             <h2 class="section__title">About Me</h2>
             <span class="section__subtitle">My Introduction</span>
             <div class="about__container container grid">
@@ -147,7 +147,7 @@
             </div>
         </section>
         <!-- SKILLS -->
-        <section class="skills section" id="skills">
+        <section class="skills section hidden" id="skills">
             <h2 class="section__title">Skills</h2>
             <span class="section__subtitle">My Technical Level</span>
             <div class="skills__container container grid">
@@ -302,7 +302,7 @@
             </div>
         </section>
         <!-- QUALIFICATION -->
-        <section class="qualification section">
+        <section class="qualification section hidden">
             <h2 class="section__title">Qualification</h2>
             <span class="section__subtitle">My Personal Journey</span>
             <div class="qualification__container container">
@@ -368,7 +368,7 @@
             </div>
         </section>
         <!-- SERVICES -->
-        <section class="services section" id="services">
+        <section class="services section hidden" id="services">
             <h2 class="section__title">Services</h2>
             <span class="section__subtitle">What I Have Done</span>
             <div class="services__container container grid">
@@ -437,7 +437,7 @@
             </div>
         </section>
         <!-- PORTFOLIO -->
-        <section class="portfolio section" id="portfolio">
+        <section class="portfolio section hidden" id="portfolio">
             <h2 class="section__title">Portfolio</h2>
             <span class="section__subtitle">My Works</span>
             <div class="portfolio__container container swiper">
@@ -492,7 +492,7 @@
             </div>
         </section>
         <!-- CONTACT ME -->
-        <section class="contact section" id="contact">
+        <section class="contact section hidden" id="contact">
             <h2 class="section__title">Contact Me</h2>
             <span class="section__subtitle">Get in touch</span>
             <div class="contact__container container grid">
