added phone number

--- a/index.html
+++ b/index.html
@@ -501,7 +501,8 @@
                         <i class="uil uil-phone contact__icon"></i>
                         <div>
                             <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">+91 7200156297</span>
+                            <!-- <span class="contact__subtitle">+91 7200156297</span> -->
+                            <a class="contact__subtitle" href="tel:+91 7200156297">+91 7200156297</a>
                         </div>
                     </div>
                     <div class="contact__information">
