Added Hyperlink to Gmail

--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
                         <i class="uil uil-envelope contact__icon"></i>
                         <div>
                             <h3 class="contact__title">Email</h3>
-                            <span class="contact__subtitle">arshathahamed500@gmail.com</span>
+                            <a class="contact__subtitle" href="mailto:arshathahamed500@gmail.com">arshahamed500@gmail.com</a>
+                            <!-- <span class="contact__subtitle">arshathahamed500@gmail.com</span> -->
                         </div>
                     </div>
                     <div class="contact__information">
