--- a/index.html
+++ b/index.html
@@ -478,7 +478,30 @@
                             </a>
                         </div>
                     </div>
-
+                    <!---->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="Images/cube.jpg" alt="Nothing" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">3D Cube</h3>
+                            <p class="portfolio__description">Make a 3d cube with the Animations and deployed in the website</p>
+                            <a href="https://3d-perspective.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="Images/cube.jpg" alt="Nothing" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">3D Cube</h3>
+                            <p class="portfolio__description">Make a 3d cube with the Animations and deployed in the website</p>
+                            <a href="https://3d-perspective.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <!-- Add Arrows -->
                 <div class="swiper-button-next">
@@ -509,7 +532,7 @@
                         <i class="uil uil-envelope contact__icon"></i>
                         <div>
                             <h3 class="contact__title">Email</h3>
-                            <a class="contact__subtitle" href="mailto:arshathahamed500@gmail.com">arshathahamed500@gmail.com</a>
+                            <a class="contact__subtitle" href="mailto:arshath0604@gmail.com">arshath0604@gmail.com</a>
                             <!-- <span class="contact__subtitle">arshathahamed500@gmail.com</span> -->
                         </div>
                     </div>
