--- a/index.html
+++ b/index.html
@@ -456,6 +456,43 @@
                     </div>
                     <!-- PORTFOLIO 2 -->
                     <div class="portfolio__content grid swiper-slide">
+                        <img src="Images/EXPENSE.png" alt="Nothing" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Expense Tracker</h3>
+                            <p class="portfolio__description">An online application built with JavaScript, HTML, and CSS to help users track their income and expenses.</p>
+                            <a href="https://expense-tracker-free.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- PORTFOLIO 3 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="Images/LOGIN_SIGNUP.png" alt="image" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Login/Signup page</h3>
+                            <p class="portfolio__description">A Python and Flask web application facilitating secure registration, login, and logout, with user data and authentication credentials managed in a database for reliable access control.</p>
+                            <a href="https://github.com/arshathahamed10/LOGIN_SIGNUP_WITH_AUTHENTICATION" target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- PORTFOLIO 4 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="Images/TODOLIST.png" alt="todo" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">To-Do List</h3>
+                            <p class="portfolio__description">
+                                The To-Do List project is a web-based application created to assist individuals in organizing and managing their tasks and responsibilities.</p>
+                            <a href="https://todo-list-localstorage10.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- PORTFOLIO - 5 -->
+                    <div class="portfolio__content grid swiper-slide">
                         <img src="Images/404.png" alt="Nothing" class="portfolio__img img2">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">404 Not Found</h3>
@@ -466,31 +503,7 @@
                             </a>
                         </div>
                     </div>
-                    <!-- PORTFOLIO 3 -->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="Images/cube.jpg" alt="Nothing" class="portfolio__img">
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">3D Cube</h3>
-                            <p class="portfolio__description">Make a 3d cube with the Animations and deployed in the website</p>
-                            <a href="https://3d-perspective.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <!---->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="Images/cube.jpg" alt="Nothing" class="portfolio__img">
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">3D Cube</h3>
-                            <p class="portfolio__description">Make a 3d cube with the Animations and deployed in the website</p>
-                            <a href="https://3d-perspective.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- -->
+                    <!-- PORTFOLIO 6 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="Images/cube.jpg" alt="Nothing" class="portfolio__img">
                         <div class="portfolio__data">
